[gd_scene load_steps=77 format=3 uid="uid://b2v18tf6dhuir"]

[ext_resource type="Script" path="res://CharacterSelect.gd" id="1_njh8l"]
[ext_resource type="Texture2D" uid="uid://dxw7m1ldyarih" path="res://Bg/forest-1.png" id="2_fr43u"]
[ext_resource type="Texture2D" uid="uid://fejmd0smwkhv" path="res://Buttons/start-button.png" id="3_icgpb"]
[ext_resource type="Texture2D" uid="uid://cqf6j1sswd7wh" path="res://Frames/border1.png" id="5_m5k47"]
[ext_resource type="Texture2D" uid="uid://uygsk45ywb50" path="res://Buttons/ArrowButton1.png" id="6_aim8v"]
[ext_resource type="Texture2D" uid="uid://b8sjkrojti7yy" path="res://Buttons/ArrowButton2.png" id="7_s5gw7"]
[ext_resource type="Texture2D" uid="uid://4ayhip7yf4ed" path="res://Characters/C4/Creeper1.png" id="8_yk2do"]
[ext_resource type="Texture2D" uid="uid://bxi08gwhhgkh0" path="res://Characters/C4/Creeper2.png" id="9_2nvyl"]
[ext_resource type="Texture2D" uid="uid://b30mthqqs13v1" path="res://Characters/C4/Creeper3.png" id="10_yvjaj"]
[ext_resource type="Texture2D" uid="uid://cqgnohpy1hic2" path="res://Characters/Bluey/BlueBird1.png" id="11_3xpr2"]
[ext_resource type="Texture2D" uid="uid://dot5vx5l5bv83" path="res://Characters/Bluey/BlueBird2.png" id="12_1uk4t"]
[ext_resource type="Texture2D" uid="uid://b8a43l4nxle5g" path="res://Characters/Bluey/BlueBird3.png" id="13_kndwc"]
[ext_resource type="Texture2D" uid="uid://cvp1rv0qkfwvb" path="res://Characters/Sunny/Sunny1.png" id="14_4lrpi"]
[ext_resource type="Texture2D" uid="uid://clroq330a0tyl" path="res://Characters/Sunny/Sunny2.png" id="15_j4ioy"]
[ext_resource type="Texture2D" uid="uid://c23ufchbekp67" path="res://Characters/Sunny/Sunny3.png" id="16_rn2nm"]
[ext_resource type="Texture2D" uid="uid://5sphveud5owj" path="res://Characters/Reddy/Pinky1.png" id="17_x7w1b"]
[ext_resource type="Texture2D" uid="uid://dxgpymfvpn6m8" path="res://Characters/Reddy/Pinky2.png" id="18_8q5sd"]
[ext_resource type="Texture2D" uid="uid://2nfq851gc75b" path="res://Characters/Reddy/Pinky3.png" id="19_h3lw4"]
[ext_resource type="FontFile" uid="uid://6ssxuept72e1" path="res://Fonts/REDENSEK.TTF" id="20_npvim"]
[ext_resource type="Texture2D" uid="uid://0agl3j7twyk5" path="res://Buttons/x.png" id="21_dyqxe"]
[ext_resource type="Texture2D" uid="uid://cl4obe6kd0xua" path="res://Buttons/check.png" id="22_s8iod"]
[ext_resource type="AudioStream" uid="uid://1s25724c8ect" path="res://Sound Effects/choose.mp3" id="23_3gq2x"]
[ext_resource type="Texture2D" uid="uid://bgf5r5i4j8gv5" path="res://Characters/BIG SMOKE.png" id="24_a08i2"]
[ext_resource type="AudioStream" uid="uid://dljp6i7t7omoe" path="res://Sound Effects/players_ready.mp3" id="24_aulnw"]
[ext_resource type="AudioStream" uid="uid://dfc1e3h00520k" path="res://Sound Effects/SelectionMusic.mp3" id="24_ax7lt"]
[ext_resource type="Texture2D" uid="uid://dclolnpkqfntx" path="res://Frames/twigged-chonk-log.png" id="25_2k8ru"]
[ext_resource type="Texture2D" uid="uid://c1iubu13rrtvh" path="res://Characters/ToxicFrogGreenBlue_Idle.png" id="26_3lebw"]
[ext_resource type="Texture2D" uid="uid://tdxqb5p48c02" path="res://Characters/ToxicFrogGreenBlue_Explosion.png" id="26_b7x3o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lvnxm"]
texture = ExtResource("2_fr43u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kps4j"]
texture = ExtResource("3_icgpb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ngndd"]
texture = ExtResource("3_icgpb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufvht"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfhbw"]
texture = ExtResource("3_icgpb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mrnbj"]
texture = ExtResource("3_icgpb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uemaj"]
texture = ExtResource("6_aim8v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7sxm3"]
texture = ExtResource("6_aim8v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ge1x"]
texture = ExtResource("6_aim8v")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b2ab5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1grbv"]
texture = ExtResource("7_s5gw7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iouji"]
texture = ExtResource("7_s5gw7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dov84"]
texture = ExtResource("7_s5gw7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nv4lh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wgyld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_yk2do")
}, {
"duration": 1.0,
"texture": ExtResource("9_2nvyl")
}, {
"duration": 1.0,
"texture": ExtResource("10_yvjaj")
}],
"loop": true,
"name": &"Player0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_3xpr2")
}, {
"duration": 1.0,
"texture": ExtResource("12_1uk4t")
}, {
"duration": 1.0,
"texture": ExtResource("13_kndwc")
}],
"loop": true,
"name": &"Player1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_4lrpi")
}, {
"duration": 1.0,
"texture": ExtResource("15_j4ioy")
}, {
"duration": 1.0,
"texture": ExtResource("16_rn2nm")
}],
"loop": true,
"name": &"Player2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_x7w1b")
}, {
"duration": 1.0,
"texture": ExtResource("18_8q5sd")
}, {
"duration": 1.0,
"texture": ExtResource("19_h3lw4")
}],
"loop": true,
"name": &"Player3",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_350ov"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("21_dyqxe")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p7dnq"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("21_dyqxe")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8mfye"]
texture = ExtResource("22_s8iod")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hpokr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2r4om"]
atlas = ExtResource("24_a08i2")
region = Rect2(0, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhgux"]
atlas = ExtResource("24_a08i2")
region = Rect2(118, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_425ir"]
atlas = ExtResource("24_a08i2")
region = Rect2(236, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytv6d"]
atlas = ExtResource("24_a08i2")
region = Rect2(354, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1b3j"]
atlas = ExtResource("24_a08i2")
region = Rect2(472, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsc2k"]
atlas = ExtResource("24_a08i2")
region = Rect2(590, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_23dm5"]
atlas = ExtResource("24_a08i2")
region = Rect2(708, 0, 118, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pujy"]
atlas = ExtResource("24_a08i2")
region = Rect2(826, 0, 118, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_6erx4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r4om")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhgux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_425ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytv6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1b3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsc2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pujy")
}],
"loop": true,
"name": &"new_animation",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_018y4"]
resource_name = "popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1.1487, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wued2"]
_data = {
"popup": SubResource("Animation_018y4")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_dpstu"]
atlas = ExtResource("26_b7x3o")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k864"]
atlas = ExtResource("26_b7x3o")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yit3"]
atlas = ExtResource("26_b7x3o")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n38v"]
atlas = ExtResource("26_b7x3o")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_63j7g"]
atlas = ExtResource("26_b7x3o")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b2u0"]
atlas = ExtResource("26_b7x3o")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_75ups"]
atlas = ExtResource("26_b7x3o")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gy81"]
atlas = ExtResource("26_b7x3o")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3f48"]
atlas = ExtResource("26_b7x3o")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2lte"]
atlas = ExtResource("26_3lebw")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q62b"]
atlas = ExtResource("26_3lebw")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sitp"]
atlas = ExtResource("26_3lebw")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_28qqk"]
atlas = ExtResource("26_3lebw")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef700"]
atlas = ExtResource("26_3lebw")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci4fs"]
atlas = ExtResource("26_3lebw")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1pob"]
atlas = ExtResource("26_3lebw")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bufag"]
atlas = ExtResource("26_3lebw")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh7s3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpstu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k864")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yit3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n38v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63j7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b2u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75ups")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gy81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3f48")
}],
"loop": true,
"name": &"clicked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2lte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q62b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sitp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28qqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef700")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci4fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1pob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bufag")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[node name="CharacterSelect" type="Node2D"]
position = Vector2(22, 8)
script = ExtResource("1_njh8l")

[node name="Panel" type="Panel" parent="."]
offset_left = -12.0
offset_top = -8.0
offset_right = 1908.0
offset_bottom = 1072.0
theme_override_styles/panel = SubResource("StyleBoxTexture_lvnxm")

[node name="Start" type="Button" parent="."]
offset_left = 1357.0
offset_top = 822.0
offset_right = 2.82015e+07
offset_bottom = 1.34009e+07
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(150, 75)
theme_override_styles/normal = SubResource("StyleBoxTexture_kps4j")
theme_override_styles/hover = SubResource("StyleBoxTexture_ngndd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ufvht")
theme_override_styles/disabled = SubResource("StyleBoxTexture_hfhbw")
theme_override_styles/focus = SubResource("StyleBoxTexture_mrnbj")
disabled = true

[node name="P1Border" type="Sprite2D" parent="."]
position = Vector2(241, 450)
scale = Vector2(3.4, 3.4)
texture = ExtResource("5_m5k47")

[node name="Left" type="Button" parent="P1Border"]
offset_left = -17.9412
offset_top = -74.4118
offset_right = 102.059
offset_bottom = 15.5882
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_uemaj")
theme_override_styles/hover = SubResource("StyleBoxTexture_7sxm3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6ge1x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b2ab5")

[node name="Right" type="Button" parent="P1Border"]
offset_left = -17.9412
offset_top = 15.5881
offset_right = 102.059
offset_bottom = 105.588
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_1grbv")
theme_override_styles/hover = SubResource("StyleBoxTexture_iouji")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dov84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nv4lh")

[node name="Player Name" type="Label" parent="P1Border"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -44.5882
offset_top = -107.235
offset_right = 28.8118
offset_bottom = -151.467
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 40
text = "PLAYER 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayerSelect" type="AnimatedSprite2D" parent="P1Border"]
position = Vector2(0.588234, -26.4706)
scale = Vector2(0.441176, 0.441176)
sprite_frames = SubResource("SpriteFrames_wgyld")
animation = &"Player3"

[node name="Name" type="Label" parent="P1Border/PlayerSelect"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -89.0439
offset_top = 49.0866
offset_right = -18.6439
offset_bottom = 68.4706
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBTN" type="Button" parent="P1Border"]
offset_left = -22.3529
offset_top = 56.1765
offset_right = 127.647
offset_bottom = 206.177
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_350ov")
theme_override_styles/hover = SubResource("StyleBoxTexture_p7dnq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8mfye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hpokr")
toggle_mode = true

[node name="Choose your Birb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_3gq2x")
autoplay = true

[node name="PlayersReady" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_aulnw")

[node name="CharacterSelectMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_ax7lt")
volume_db = -10.0
autoplay = true

[node name="Announcement" type="Label" parent="."]
offset_left = 424.0
offset_top = 914.0
offset_right = 1477.0
offset_bottom = 1065.0
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 80
text = "0/1 Players are Ready!"
horizontal_alignment = 1

[node name="Start Effect" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1678, 989)
scale = Vector2(5.67797, 4.77586)
sprite_frames = SubResource("SpriteFrames_6erx4")
animation = &"new_animation"
frame_progress = 0.548579

[node name="ButtonAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wued2")
}

[node name="Log" type="Sprite2D" parent="."]
position = Vector2(226, 1039)
scale = Vector2(2.92, 2.785)
texture = ExtResource("25_2k8ru")

[node name="Frog" type="AnimatedSprite2D" parent="."]
position = Vector2(246, 958)
scale = Vector2(4.67708, 4.16667)
sprite_frames = SubResource("SpriteFrames_dh7s3")
animation = &"clicked"
autoplay = "idle"
frame_progress = 0.808026

[node name="P2Border" type="Sprite2D" parent="."]
position = Vector2(703, 450)
scale = Vector2(3.4, 3.4)
texture = ExtResource("5_m5k47")

[node name="Left" type="Button" parent="P2Border"]
offset_left = -17.9412
offset_top = -74.4118
offset_right = 102.059
offset_bottom = 15.5882
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_uemaj")
theme_override_styles/hover = SubResource("StyleBoxTexture_7sxm3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6ge1x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b2ab5")

[node name="Right" type="Button" parent="P2Border"]
offset_left = -17.9412
offset_top = 15.5881
offset_right = 102.059
offset_bottom = 105.588
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_1grbv")
theme_override_styles/hover = SubResource("StyleBoxTexture_iouji")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dov84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nv4lh")

[node name="Player Name" type="Label" parent="P2Border"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -44.5882
offset_top = -107.235
offset_right = 28.8118
offset_bottom = -151.467
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 40
text = "PLAYER 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayerSelect" type="AnimatedSprite2D" parent="P2Border"]
position = Vector2(0.588234, -26.4706)
scale = Vector2(0.441176, 0.441176)
sprite_frames = SubResource("SpriteFrames_wgyld")
animation = &"Player3"

[node name="Name" type="Label" parent="P2Border/PlayerSelect"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -89.0439
offset_top = 49.0866
offset_right = -18.6439
offset_bottom = 68.4706
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBTN" type="Button" parent="P2Border"]
offset_left = -22.3529
offset_top = 56.1765
offset_right = 127.647
offset_bottom = 206.177
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_350ov")
theme_override_styles/hover = SubResource("StyleBoxTexture_p7dnq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8mfye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hpokr")
toggle_mode = true

[node name="P3Border" type="Sprite2D" parent="."]
position = Vector2(1183, 450)
scale = Vector2(3.4, 3.4)
texture = ExtResource("5_m5k47")

[node name="Left" type="Button" parent="P3Border"]
offset_left = -17.9412
offset_top = -74.4118
offset_right = 102.059
offset_bottom = 15.5882
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_uemaj")
theme_override_styles/hover = SubResource("StyleBoxTexture_7sxm3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6ge1x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b2ab5")

[node name="Right" type="Button" parent="P3Border"]
offset_left = -17.9412
offset_top = 15.5881
offset_right = 102.059
offset_bottom = 105.588
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_1grbv")
theme_override_styles/hover = SubResource("StyleBoxTexture_iouji")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dov84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nv4lh")

[node name="Player Name" type="Label" parent="P3Border"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -44.5882
offset_top = -107.235
offset_right = 28.8118
offset_bottom = -151.467
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 40
text = "PLAYER 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayerSelect" type="AnimatedSprite2D" parent="P3Border"]
position = Vector2(0.588234, -26.4706)
scale = Vector2(0.441176, 0.441176)
sprite_frames = SubResource("SpriteFrames_wgyld")
animation = &"Player3"

[node name="Name" type="Label" parent="P3Border/PlayerSelect"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -89.0439
offset_top = 49.0866
offset_right = -18.6439
offset_bottom = 68.4706
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBTN" type="Button" parent="P3Border"]
offset_left = -22.3529
offset_top = 56.1765
offset_right = 127.647
offset_bottom = 206.177
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_350ov")
theme_override_styles/hover = SubResource("StyleBoxTexture_p7dnq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8mfye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hpokr")
toggle_mode = true

[node name="P4Border" type="Sprite2D" parent="."]
position = Vector2(1656, 450)
scale = Vector2(3.4, 3.4)
texture = ExtResource("5_m5k47")

[node name="Left" type="Button" parent="P4Border"]
offset_left = -17.9412
offset_top = -74.4118
offset_right = 102.059
offset_bottom = 15.5882
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_uemaj")
theme_override_styles/hover = SubResource("StyleBoxTexture_7sxm3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6ge1x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b2ab5")

[node name="Right" type="Button" parent="P4Border"]
offset_left = -17.9412
offset_top = 15.5881
offset_right = 102.059
offset_bottom = 105.588
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_1grbv")
theme_override_styles/hover = SubResource("StyleBoxTexture_iouji")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dov84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nv4lh")

[node name="Player Name" type="Label" parent="P4Border"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -44.5882
offset_top = -107.235
offset_right = 28.8118
offset_bottom = -151.467
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 40
text = "PLAYER 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayerSelect" type="AnimatedSprite2D" parent="P4Border"]
position = Vector2(0.588234, -26.4706)
scale = Vector2(0.441176, 0.441176)
sprite_frames = SubResource("SpriteFrames_wgyld")
animation = &"Player3"

[node name="Name" type="Label" parent="P4Border/PlayerSelect"]
anchors_preset = -1
anchor_right = 0.825
anchor_bottom = 0.372
offset_left = -89.0439
offset_top = 49.0866
offset_right = -18.6439
offset_bottom = 68.4706
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("20_npvim")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBTN" type="Button" parent="P4Border"]
offset_left = -22.3529
offset_top = 56.1765
offset_right = 127.647
offset_bottom = 206.177
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_350ov")
theme_override_styles/hover = SubResource("StyleBoxTexture_p7dnq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8mfye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hpokr")
toggle_mode = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]

[connection signal="pressed" from="Start" to="." method="_on_select_player_pressed"]
[connection signal="pressed" from="P1Border/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="P1Border/Right" to="." method="_on_right_pressed"]
[connection signal="toggled" from="P1Border/ConfirmBTN" to="." method="_on_button_toggled"]
[connection signal="pressed" from="P2Border/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="P2Border/Right" to="." method="_on_right_pressed"]
[connection signal="toggled" from="P2Border/ConfirmBTN" to="." method="_on_button_toggled"]
[connection signal="pressed" from="P3Border/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="P3Border/Right" to="." method="_on_right_pressed"]
[connection signal="toggled" from="P3Border/ConfirmBTN" to="." method="_on_button_toggled"]
[connection signal="pressed" from="P4Border/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="P4Border/Right" to="." method="_on_right_pressed"]
[connection signal="toggled" from="P4Border/ConfirmBTN" to="." method="_on_button_toggled"]
